--- a/Practice_Inclass/Lesson 5/style.css
+++ b/Practice_Inclass/Lesson 5/style.css
@@ -1,82 +1,117 @@
 html{
- font-family: Arial, Helvetica, sans-serif;
- font-size: 62.5%;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 62.5%;
+ }
+ 
+ *{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+ }
+ 
+ .fs-18{
+	font-size: 1.8rem;
+ }
+ 
+ .fs-36{
+	font-size: 3.6rem;
+ }
+
+ .pt-16{
+	padding-top: 16px;
+ }
+
+ .mt-16{
+	margin-top: 16px;
+ }
+ 
+ .mb-16{
+	margin-bottom: 16px;
+ }
+
+ .ml-8{
+	margin-left: 8px;
+ }
+
+ /* #main{
+	width: 50%;
+	display: grid;
+	grid-template-columns: auto auto;
+ } */
+ 
+ .card-1{
+	display: flex;
+	max-width: 464px;
+	width: 50%;
+	background-color: #FFD38A;
+	border-radius: 16px;
+ }
+ 
+ .card-1__left{
+	width: 50%;
+	padding: 16px;
+	background-color: #E2E2E2;
+	border-radius: 16px;
+ }
+ 
+ .card-1__img-item{
+	max-width: 200px;
+	width: 100%;
+	border-radius: 16px;
+	aspect-ratio: 1/1;
+	object-fit: cover;
+ }
+ 
+ .card-1__status{
+	background-color: #69A042;
+	padding: 8px 12px;
+	border-radius: 16px;
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	text-align: center;
+	line-height: 22px;
+	color: #fff;
+	font-size: 1.2rem;
+	font-weight: 700;
+ }
+ 
+ .card-1__btns{
+	display: flex;
+ }
+ 
+ .card-1__btn{
+	background-color: #000;
+	padding: 8px;
+	border-radius: 50%;
+	color: #fff;
+	font-size: 1.4rem;
+	margin-right: 8px;
+ }
+ 
+ .card-1__right{
+	padding: 16px;
+	width: 50%;
+ }
+
+ .card-1__right-content{
+	display: flex;
+	flex-direction: column;
+ }
+
+ .card-1__social-btn{
+	background-color: #fff;
+	color: #000;
+	padding: 8px;
+	border-radius: 50%;
+	font-size: 1.4rem;
+	margin-right: 8px;
+ }
+
+ .card-1__language-container{
+	display: flex;
+ }
+
+.card-1__job{
+	font-weight: 700;
 }
-
-*{
- margin: 0;
- padding: 0;
- box-sizing: border-box;
-}
-
-.fs-18{
- font-size: 1.8rem;
-}
-
-.fs-36{
- font-size: 3.6rem;
-}
-
-/* #main{
- width: 50%;
- display: grid;
- grid-template-columns: auto auto;
-} */
-
-.card-1{
- display: flex;
- width: 50%;
- background-color: #FFD38A;
- border-radius: 16px;
-}
-
-.card-1__left{
- width: 50%;
- /* height: 240px; */
- padding: 16px;
- background-color: #E2E2E2;
- border-radius: 16px;
-}
-
-.card-1__img-container{
- position: relative;
-}
-
-.card-1__img-item{
- width: 100%;
- border-radius: 16px;
- aspect-ratio: 1/1;
- object-fit: cover;
-}
-
-.card-1__status{
- background-color: #69A042;
- padding: 8px 12px;
- border-radius: 16px;
- position: absolute;
- bottom: 0;
- right: 0;
- text-align: center;
- line-height: 22px;
- color: #fff;
- font-size: 1.2rem;
- font-weight: 700;
-}
-
-.card-1__btns{
- display: flex;
- margin-top: 8px;
-}
-
-.card-1__btn{
- background-color: #000;
- padding: 8px;
- border-radius: 50%;
- color: #fff;
- font-size: 1.2rem;
- margin-right: 8px;
-}
-
-.card-1__name{
-}
-
